static-files/css/base.css
body {
    font-family: Helvetica Neue, Arial, sans-serif;
    font-size: 9pt;
    background: white;
    margin: 0;
}

a {
    color: black;
}

a:hover {
    background: yellow;
}

h1 {
    margin: 0;
    padding-bottom: 1em;
}

.docs ul {
    padding-left: 2em;
}

#cannot-ping {
    padding: 0.5em;
    background: #aa0000;
    color: white;
    display: none;
}

#columns {
    display: table;
    height: 100%;
}

#left-column {
    width: 25em;
    background: #f0f0f0;
    padding: 1em;
    display: table-cell;
}

#right-column {
    width: 40em;
    padding: 1em;
    display: table-cell;
}

#sidenotes {
    width: 15em;
    display: table-cell;
}

#footer {
    background: #555555;
    color: white;
    padding: 0.5em;
}

#footer .actions {
    display: block;
    float: right;
}

#view-source {
    color: white;
    text-decoration: none;
}

#view-source:hover {
    color: black;
}

.meta-header {
    font-weight: bold;
}

#more-packages {
    font-size: 8pt;
    color: gray;
    cursor: pointer;
}
  
.package-entry {
    color: gray;
    padding-bottom: 1em;
}

.package-entry .name {
    font-weight: bold;
    color: black;
}

.package-entry .description {
}

.package-entry .modules {
    font-size: 8pt;
    margin-top: 0.2em;
    margin-bottom: 0.2em;
    padding-left: 2em;
}

.package-detail .modules {
    padding-left: 0;
}

.package-entry .module,
.package-detail .module {
    display: inline;
    margin-right: 1em;
    white-space: nowrap;
}

.package-entry .module a:not(:hover) {
    color: gray;
}

pre {
    padding-left: 1em;
}

pre, code {
    font-family: Monaco, Lucida Console, monospace;
    font-size: 8pt;
}

code em, code strong {
  font-size: 9pt;
}

#templates {
    display: none;
}

#left-column a {
    text-decoration: none;
}

#dev-guide-toc ol {
    padding-left: 2em;
}

#dev-guide-toc #tutorials {
    list-style: decimal;
}

#dev-guide-toc #appendices {
    list-style: upper-alpha;
}

#dev-guide-toc .section {
    font-weight: bold;
}

.aside {
    color: gray;
    border-left: gray 1px solid;
    padding-left: 1em;
    padding-right: 1em;
    position: absolute;
    display: block;
}

#dev-guide-header {
    /* TODO: This is a dumb place to put a margin-top. */
    margin-top: 0.25em;
}

#dev-guide-header:hover #hide-dev-guide-toc {
    visibility: visible;
}

#hide-dev-guide-toc {
    font-size: 0.6em;
    padding: 0.05em 0.4em;
    visibility: hidden;
}

#hide-dev-guide-toc:hover {
    -moz-border-radius: 2em;
    background: #555;
    color: #fff;
    cursor: pointer;
}

table {
    width: 100%;
    border-collapse: collapse;
}

table, td, tr {
    border: 1px black solid;
}

td {
    padding: 0.5em;
}

/* Rule to fix quirks-mode inheritance behavior */
table, caption {
  font-size: inherit;
  font-weight: inherit;
  font-style: inherit;
  font-variant: inherit;
}

table.meta-table, .meta-table td, .meta-table tr {
    vertical-align: top;
    border: none;
    padding: 0;
    padding-top: 0.25em;
    padding-bottom: 0.25em;
    padding-right: 5em;
}

table.meta-table {
    margin-top: 0.5em;
    border-top: 1px dotted gray;
    border-bottom: 1px dotted gray;
}

.package-detail .authors, .package-detail .dependencies,
.package-detail .version, .package-detail .license {
    font-family: Monaco, Lucida Console, monospace;
    font-size: 8pt;
    white-space: pre;
}

.technical-error {
    font-family: Monaco, Lucida Console, monospace;
    font-size: 8pt;
    white-space: pre-wrap;
    color: red;
}

textarea {
    border: none;
    font-family: Monaco, Lucida Console, monospace;
    font-size: 8pt;
}

textarea.jetpack-lab-editor-code {
    border: 1px dashed #aaa;
    margin-bottom: 1em;
    padding: 1em;
}

textarea.jetpack-lab-editor-console {
    margin-top: 1em;
}

textarea.jetpack-lab-editor-console-error {
    color: red;
}

.jetpack-lab-show-when-installed {
    display: none;
}

